fix: changed order of html to make it more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body{
-    
+    width: 100%;
+    height: 100%;
 }
 section{
     width: 100%;
@@ -56,6 +57,7 @@ section{
 }
 
 /* Lingo Game Tiles */
+
 #game-area ul{
     list-style: none;
     display: table;
